# uwv-woo-publicaties-full-text-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-crawl.yml  pages.yml
config/: sources.yml
data/: state.json
data/2019-03-03-woo-besluit-bc-k-rapporten/: 2019-03-03-bijlage-1-mcp-2015-jun-jul-aug.json  2019-03-03-bijlage-1-mcp-2015-jun-jul-aug.md  2019-03-03-bijlage-10-mcp-2017-feb.json  2019-03-03-bijlage-10-mcp-2017-feb.md  2019-03-03-bijlage-11-mcp-2017-mrt.json  2019-03-03-bijlage-11-mcp-2017-mrt.md  2019-03-03-bijlage-12-mcp-2017-apr.json  2019-03-03-bijlage-12-mcp-2017-apr.md  2019-03-03-bijlage-13-mcp-2017-mei.json  2019-03-03-bijlage-13-mcp-2017-mei.md  2019-03-03-bijlage-14-mcp-2017-juni.json  2019-03-03-bijlage-14-mcp-2017-juni.md  2019-03-03-bijlage-15-mcp-2017-juli.json  2019-03-03-bijlage-15-mcp-2017-juli.md  2019-03-03-bijlage-16-mcp-2017-aug.json  2019-03-03-bijlage-16-mcp-2017-aug.md  2019-03-03-bijlage-17-mcp-2017-sept.json  2019-03-03-bijlage-17-mcp-2017-sept.md  2019-03-03-bijlage-18-mcp-2017-okt.json  2019-03-03-bijlage-18-mcp-2017-okt.md  2019-03-03-bijlage-19-mcp-2017-nov.json  2019-03-03-bijlage-19-mcp-2017-nov.md  2019-03-03-bijlage-2-mcp-2015-sept-okt-nov.json  2019-03-03-bijlage-2-mcp-2015-sept-okt-nov.md  2019-03-03-bijlage-20-mcp-2017-dec.json  2019-03-03-bijlage-20-mcp-2017-dec.md  (+140 more)
scripts/: build_search_index.mjs  build_site.py  package-lock.json  package.json  rename_dated_slugs.py
site/: about.html  index.html
src/: config.py  crawl.py  extract.py  main.py  render.py  state.py  utils.py
(+2736 files in other folders)
